--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.0-SNAPSHOT'
+    
     id 'io.spring.dependency-management' version '1.1.0'
+    id 'org.springframework.boot' version '2.7.9'
 }
 
 group 'com.example'
