--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
 plugins {
     id 'java'
-    
+    id 'org.springframework.boot' version '3.1.0-SNAPSHOT'
     id 'io.spring.dependency-management' version '1.1.0'
-    id 'org.springframework.boot' version '2.7.9'
 }
 
 group 'com.example'
-version '1.0-SNAPSHOT'
+version '1.1-SNAPSHOT'
 
-sourceCompatibility = 21
+sourceCompatibility = 17
 
 repositories {
     mavenCentral()
