--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,13 @@ services:
 
   phpmyadmin:
     image: phpmyadmin
-    environment:
-      - PMA_HOST=mysql
     ports:
       - 8083:80
+    environment:
+      - PMA_HOST=${PMA_HOST}
+      - PMA_PORT=${PMA_PORT}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+
     container_name: phpmyadmin
   java:
     image: 164.92.198.37:8083/jdk:1.0
